@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.xbmctools" name="XBMC Tools" version="1.1.5" provider-name="Anonymous">
+<addon id="plugin.video.xbmctools" name="K0di Tools" version="1.1.6" provider-name="Anonymous">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
   </requires>
@@ -11,7 +11,7 @@
   <extension point="xbmc.addon.metadata">
     <language>en</language>
     <platform>all</platform>
-    <summary lang="en">XBMC Tools</summary>
+    <summary lang="en">K0di Tools</summary>
     <description lang="pt">Algumas ferramentas necessarias.
 	
 	FAQ: http://goo.gl/9S2CD3 </description>
